[package]
name = "pyl"
version = "0.1.2"
edition = "2021"
rust-version = "1.70"

description = "Smarter Python launcher for Windows — drop-in py.exe replacement with PyPy, Anaconda, and custom alias support"
authors = ["Hadi Cahyadi <cumulus13@gmail.com>"]
license = "MIT"
homepage = "https://github.com/cumulus13/pyl"
repository = "https://github.com/cumulus13/pyl"
documentation = "https://github.com/cumulus13/pyl#readme"
readme = "README.md"
keywords = ["python", "launcher", "pypy", "windows", "pep514"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/*",
    "*.bat",
    "tests/*",
]

[[bin]]
name = "pyl"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
winreg = "0.51"

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1.0.96"
toml        = "0.7"
indexmap    = "=2.2.6"
clap-version-flag = "1.0.7"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
